--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ apply plugin: 'kotlin-kapt'
 tasks.build.dependsOn = []
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion maxApiLevel
+    buildToolsVersion androidBuildToolsVersion
 
     dataBinding {
         enabled = true
@@ -27,8 +27,8 @@ android {
 
     defaultConfig {
         applicationId "ar.gob.coronavirus"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion minApiLevel
+        targetSdkVersion maxApiLevel
         versionCode 138
         versionName "3.5.2" + (project.hasProperty("VERSION_CLASSIFIER") ? "-" + project.property("VERSION_CLASSIFIER") : "")
         multiDexEnabled true
@@ -80,63 +80,56 @@ android {
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
 
 dependencies {
-    def nav_version = "2.3.0-alpha04"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-rxjava2:2.2.5"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-    implementation "androidx.security:security-crypto:1.1.0-alpha01"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.legacy:legacy-support-v4:$legacySupportVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-rxjava2:$roomVersion"
+    implementation "androidx.navigation:navigation-fragment:$navVersion"
+    implementation "androidx.navigation:navigation-ui:$navVersion"
+    implementation "androidx.security:security-crypto:$securityCryptoVersion"
+    implementation "com.google.android.material:material:$androidMaterialVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 
     //RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
     //Retrofit
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptorVersion"
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'dev.turingcomplete:kotlin-onetimepassword:2.0.0'
-    implementation 'commons-codec:commons-codec:1.13'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation "net.zetetic:android-database-sqlcipher:$sqlCipherVersion"
+    implementation "dev.turingcomplete:kotlin-onetimepassword:$otpVersion"
+    implementation "commons-codec:commons-codec:$commonsCodecVesion"
 
     //ZXING
-    // DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
-    implementation 'com.google.zxing:core:3.3.3'
-    implementation('com.journeyapps:zxing-android-embedded:4.0.1') { transitive = false }
+    implementation "com.google.zxing:core:$zxingVersion"
+    implementation("com.journeyapps:zxing-android-embedded:") { transitive = false }
 
     //LOCATION
-    implementation 'com.google.android.gms:play-services-location:15.0.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.google.android.gms:play-services-location:$playServicesLocationVersion"
+    implementation "androidx.multidex:multidex:$multidexVersion"
 
     //NEW RELIC
-    implementation "com.newrelic.agent.android:android-agent:5.+"
+    implementation "com.newrelic.agent.android:android-agent:$newRelicVersion"
 
     //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
+    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingServiceVersiom"
 
     //TEST
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'commons-codec:commons-codec:1.13'
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test.ext:junit:$junitAndroidVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
 }
