--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,49 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
 
+# Build Version
+minApiLevel=21
+maxApiLevel=29
+androidBuildToolsVersion=29.0.3
+
+#Libs Version
+kotlinVersion=1.3.72
+navVersion=2.3.0-alpha04
+buildGradleVersion=3.6.1
+newRelicVersion=5.+
+googleServicesVersion=4.2.0
+androidMaterialVersion=1.2.0-alpha05
+securityCryptoVersion=1.1.0-alpha01
+roomVersion=2.2.5
+fragmentKtxVersion=1.2.5
+lifecycleVersion=2.2.0
+constraintLayoutVersion=1.1.3
+legacySupportVersion=1.0.0
+appCompatVersion=1.1.0
+rxJavaVersion=2.2.9
+rxAndroidVersion=2.1.0
+retrofitVersion=2.5.0
+loggingInterceptorVersion=4.5.0
+glideVersion=4.11.0
+timberVersion=4.7.1
+sqlCipherVersion=4.4.0
+otpVersion=2.0.0
+commonsCodecVersion=1.13
+playServicesLocationVersion=15.0.0
+multidexVersion=2.0.1
+firebaseCoreVersion=17.0.0
+firebaseMessagingVersion=
+
+# DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
+zxingVersion=3.3.3
+zxingEmbeddedVersion=4.0.1
+
+# Testing libs version
+junitVersion=4.12
+junitAndroidVersion=1.1.1
+espressoCoreVersion=3.2.0
+
+# AndroidX
+android.useAndroidX=true
+android.enableJetifier=true
