--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,134 +9,138 @@ apply plugin: 'kotlin-kapt'
 tasks.build.dependsOn = []
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+  compileSdkVersion 29
+  buildToolsVersion "29.0.3"
 
-    dataBinding {
-        enabled = true
+  dataBinding {
+    enabled = true
+  }
+
+  repositories {
+    mavenCentral()
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+  defaultConfig {
+    applicationId "ar.gob.coronavirus"
+    minSdkVersion 21
+    targetSdkVersion 29
+    versionCode 138
+    versionName "3.5.2" + (project.hasProperty("VERSION_CLASSIFIER") ?
+      "-" + project.property("VERSION_CLASSIFIER") : "")
+    multiDexEnabled true
+    vectorDrawables.useSupportLibrary = true
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+    buildConfigField("String", "APP_NAME", "\"CuidAR\"")
+
+    // Pin certificates
+    buildConfigField("String", "CERTIFICADO_SHA1",
+      "\"sha256/UXt/pC5LL5LT5C2ajleIfKh8FUrseWflM+tcO+284+o=\"")
+    buildConfigField("String", "CERTIFICADO_SHA2",
+      "\"sha256/JSMzqOOrtyOT1kmau6zKhgT676hGgczD5VMdRMyJZFA=\"")
+    buildConfigField("String", "CERTIFICADO_SHA3",
+      "\"sha256/++MBgDH5WGvL9Bcn5Be30cRcL0f5O+NyoXuWtQdX1aI=\"")
+  }
+
+  buildTypes {
+
+    opensource {
+      debuggable true
+      signingConfig signingConfigs.debug
     }
 
-    repositories {
-        mavenCentral()
+    staging {
+      debuggable true
+      signingConfig signingConfigs.debug
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    release {
+      minifyEnabled true
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
+  }
 
-    defaultConfig {
-        applicationId "ar.gob.coronavirus"
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 138
-        versionName "3.5.2" + (project.hasProperty("VERSION_CLASSIFIER") ? "-" + project.property("VERSION_CLASSIFIER") : "")
-        multiDexEnabled true
-        vectorDrawables.useSupportLibrary = true
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        buildConfigField("String", "APP_NAME", "\"CuidAR\"")
-
-        // Pin certificates
-        buildConfigField("String", "CERTIFICADO_SHA1", "\"sha256/UXt/pC5LL5LT5C2ajleIfKh8FUrseWflM+tcO+284+o=\"")
-        buildConfigField("String", "CERTIFICADO_SHA2", "\"sha256/JSMzqOOrtyOT1kmau6zKhgT676hGgczD5VMdRMyJZFA=\"")
-        buildConfigField("String", "CERTIFICADO_SHA3", "\"sha256/++MBgDH5WGvL9Bcn5Be30cRcL0f5O+NyoXuWtQdX1aI=\"")
+  buildTypes.each {
+    if (project.file("./src/${it.name}/build.gradle").exists()) {
+      apply from: "./src/${it.name}/build.gradle"
     }
+  }
 
-    buildTypes {
-
-        opensource {
-            debuggable true
-            signingConfig signingConfigs.debug
-        }
-
-        staging {
-            debuggable true
-            signingConfig signingConfigs.debug
-        }
-
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    buildTypes.each {
-        if (project.file("./src/${it.name}/build.gradle").exists()){
-            apply from: "./src/${it.name}/build.gradle"
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
-    }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+  kotlinOptions {
+    jvmTarget = JavaVersion.VERSION_1_8.toString()
+  }
 }
 
-apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+apply plugin: 'com.google.gms.google-services' // Google Play services Gradle plugin
 
 dependencies {
-    def nav_version = "2.3.0-alpha04"
+  def nav_version = "2.3.0-alpha04"
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-rxjava2:2.2.5"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-    implementation "androidx.security:security-crypto:1.1.0-alpha01"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    kapt "androidx.room:room-compiler:2.2.5"
+  //ANDROID
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+  implementation 'androidx.fragment:fragment-ktx:1.2.5'
+  implementation "androidx.room:room-runtime:2.2.5"
+  implementation "androidx.room:room-rxjava2:2.2.5"
+  implementation "androidx.navigation:navigation-fragment:$nav_version"
+  implementation "androidx.navigation:navigation-ui:$nav_version"
+  implementation "androidx.security:security-crypto:1.1.0-alpha01"
+  implementation 'com.google.android.material:material:1.2.0-alpha05'
+  kapt "androidx.room:room-compiler:2.2.5"
 
-    //RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+  //RxJava
+  implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+  implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 
-    //Retrofit
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
+  //Retrofit
+  implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+  implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+  implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'dev.turingcomplete:kotlin-onetimepassword:2.0.0'
-    implementation 'commons-codec:commons-codec:1.13'
+  implementation 'com.github.bumptech.glide:glide:4.11.0'
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+  implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+  implementation 'dev.turingcomplete:kotlin-onetimepassword:2.0.0'
+  implementation 'commons-codec:commons-codec:1.13'
 
-    //ZXING
-    // DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
-    implementation 'com.google.zxing:core:3.3.3'
-    implementation('com.journeyapps:zxing-android-embedded:4.0.1') { transitive = false }
+  //ZXING
+  // DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
+  implementation 'com.google.zxing:core:3.3.3'
+  implementation('com.journeyapps:zxing-android-embedded:4.0.1') { transitive = false }
 
-    //LOCATION
-    implementation 'com.google.android.gms:play-services-location:15.0.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
+  //LOCATION
+  implementation 'com.google.android.gms:play-services-location:15.0.0'
+  implementation 'androidx.multidex:multidex:2.0.1'
 
-    //NEW RELIC
-    implementation "com.newrelic.agent.android:android-agent:5.+"
+  //NEW RELIC
+  implementation "com.newrelic.agent.android:android-agent:5.+"
 
-    //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+  //FIREBASE
+  implementation 'com.google.firebase:firebase-core:17.0.0'
+  implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
-    //TEST
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  //TEST
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'commons-codec:commons-codec:1.13'
+  implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+  implementation 'commons-codec:commons-codec:1.13'
 }
