--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,50 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+# Build Version
+compileSdkLevel=29
+buildToolsLevel=29.0.3
+minSdkLevel=21
+targetSdkLevel=29
+
+# Libs Version (Build.Gradle Project)
+kotlinVersion=1.3.72
+navVersion=2.3.0
+buildGradleVersion=3.6.1
+newRelicVersion=5.+
+googleServicesVersion=4.2.0
+
+# Libs Version (Build.Gradle Modules)
+androidMaterialVersion=1.2.0
+roomVersion=2.2.5
+fragmentKtxVersion=1.2.5
+lifecycleVersion=2.2.0
+constraintLayoutVersion=1.1.3
+legacySupportVersion=1.0.0
+appCompatVersion=1.1.0
+rxJavaVersion=2.2.9
+rxAndroidVersion=2.1.0
+retrofitVersion=2.5.0
+loggingInterceptorVersion=4.5.0
+glideVersion=4.11.0
+timberVersion=4.7.1
+sqlCipherVersion=4.4.0
+commonsCodecVersion=1.13
+playServicesLocationVersion=15.0.0
+multidexVersion=2.0.1
+firebaseCoreVersion=17.0.0
+firebaseMessagingVersion=20.0.0
+koinVersion=2.1.6
+
+# Se utiliza versión alfa de 1.1.0 ya que permite retrocompatibilidad con API < 23
+# Será actualizada cuando esté disponible su versión estable.
+securityCryptoVersion=1.1.0-alpha01
+
+# DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
+zxingVersion=3.3.3
+zxingEmbeddedVersion=4.0.1
+
+# Testing libs version
+junitVersion=4.13
+junitAndroidVersion=1.1.1
+espressoCoreVersion=3.2.0
