--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
-apply plugin: "androidx.navigation.safeargs"
-apply plugin: 'newrelic'
+apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'newrelic'
 
 // We dynamically add the dependencies to avoid failures
 tasks.build.dependsOn = []
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    buildToolsVersion buildToolsLevel
 
     dataBinding {
         enabled = true
@@ -27,10 +27,11 @@ android {
 
     defaultConfig {
         applicationId "ar.gob.coronavirus"
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 138
-        versionName "3.5.2" + (project.hasProperty("VERSION_CLASSIFIER") ? "-" + project.property("VERSION_CLASSIFIER") : "")
+        minSdkVersion minSdkLevel
+        targetSdkVersion targetSdkLevel
+        versionCode 140
+        versionName "3.5.4" + (project.hasProperty("VERSION_CLASSIFIER") ? "-" + project.property("VERSION_CLASSIFIER") : "")
+
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
 
@@ -45,7 +46,6 @@ android {
     }
 
     buildTypes {
-
         opensource {
             debuggable true
             signingConfig signingConfigs.debug
@@ -63,7 +63,7 @@ android {
     }
 
     buildTypes.each {
-        if (project.file("./src/${it.name}/build.gradle").exists()){
+        if (project.file("./src/${it.name}/build.gradle").exists()) {
             apply from: "./src/${it.name}/build.gradle"
         }
     }
@@ -72,71 +72,61 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
-apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+apply plugin: 'com.google.gms.google-services'
 
 dependencies {
-    def nav_version = "2.3.0-alpha04"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //ANDROID
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-rxjava2:2.2.5"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-    implementation "androidx.security:security-crypto:1.1.0-alpha01"
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    kapt "androidx.room:room-compiler:2.2.5"
+    //Android
+    implementation "androidx.multidex:multidex:$multidexVersion"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.legacy:legacy-support-v4:$legacySupportVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
+    implementation "androidx.navigation:navigation-fragment:$navVersion"
+    implementation "androidx.navigation:navigation-ui:$navVersion"
+    implementation "androidx.security:security-crypto:$securityCryptoVersion"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-rxjava2:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "com.google.android.material:material:$androidMaterialVersion"
+    implementation "com.google.android.gms:play-services-location:$playServicesLocationVersion"
+
+    //Firebase
+    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
+    implementation "com.google.firebase:firebase-messaging:$firebaseMessagingVersion"
 
     //RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
 
     //Retrofit
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptorVersion"
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'dev.turingcomplete:kotlin-onetimepassword:2.0.0'
-    implementation 'commons-codec:commons-codec:1.13'
+    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
 
-    //ZXING
-    // DON'T UPDATE THIS VERSIONS UNLESS MIN_SDK IS BUMPED TO 24
-    implementation 'com.google.zxing:core:3.3.3'
-    implementation('com.journeyapps:zxing-android-embedded:4.0.1') { transitive = false }
-
-    //LOCATION
-    implementation 'com.google.android.gms:play-services-location:15.0.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
-
-    //NEW RELIC
-    implementation "com.newrelic.agent.android:android-agent:5.+"
-
-    //FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    //Otras
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation "net.zetetic:android-database-sqlcipher:$sqlCipherVersion"
+    implementation "commons-codec:commons-codec:$commonsCodecVersion"
+    implementation "com.newrelic.agent.android:android-agent:$newRelicVersion"
+    implementation "com.google.zxing:core:$zxingVersion"
+    implementation("com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion") { transitive = false }
 
     //TEST
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
-    implementation 'commons-codec:commons-codec:1.13'
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test.ext:junit:$junitAndroidVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
 }
